--- a/scripts/argocd-ingress.yaml
+++ b/scripts/argocd-ingress.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   ingressClassName: "nginx"
   rules:
-  - host: argocd.example.com
+  - host: argocd.dachlab.net
     http:
       paths:
       - path: /
