--- a/mgmt/edge-k8s-clusters.yaml
+++ b/mgmt/edge-k8s-clusters.yaml
@@ -1,8 +1,42 @@
 key:
   clusters:
     - name: edge1
-      controlplane_ip: 10.48.38.85
+      controlplane_ip: 10.48.38.43
       cluster: crimson
+      globalRange: 10.48.38.44/32
     - name: edge2
-      controlplane_ip: 10.48.38.89
+      controlplane_ip: 10.48.38.45
       cluster: crimson
+      globalRange: 10.48.38.46/32
+    - name: edge3
+      controlplane_ip: 10.48.38.47
+      cluster: crimson
+      globalRange: 10.48.38.48/32
+    - name: edge4
+      controlplane_ip: 10.48.38.49
+      cluster: crimson
+      globalRange: 10.48.38.50/32
+    - name: edge5
+      controlplane_ip: 10.48.38.51
+      cluster: crimson
+      globalRange: 10.48.38.52/32
+    - name: edge6
+      controlplane_ip: 10.48.38.53
+      cluster: crimson
+      globalRange: 10.48.38.54/32
+    - name: edge7
+      controlplane_ip: 10.48.38.55
+      cluster: crimson
+      globalRange: 10.48.38.56/32
+    - name: edge8
+      controlplane_ip: 10.48.38.57
+      cluster: crimson
+      globalRange: 10.48.38.58/32
+    - name: edge9
+      controlplane_ip: 10.48.38.59
+      cluster: crimson
+      globalRange: 10.48.38.60/32
+    - name: edge10
+      controlplane_ip: 10.48.38.61
+      cluster: crimson
+      globalRange: 10.48.38.62/32
