disable kubevip-lb

--- a/mgmt/edge-base-values.yaml
+++ b/mgmt/edge-base-values.yaml
@@ -12,7 +12,7 @@ nodes:
 
 kubeVip:
   cloudProvider:
-    enabled: true
+    enabled: false
 
 kcpMachine:
   cluster: crimson
@@ -28,7 +28,7 @@ machinehealthcheck: false
 
 ccm:
   enabled: false
-  
+
 csi:
   snapshot: false
   enable_csi2: false
