--- a/mgmt/edge-k8s-clusters.yaml
+++ b/mgmt/edge-k8s-clusters.yaml
@@ -40,3 +40,19 @@ key:
       controlplane_ip: 10.48.38.61
       cluster: crimson
       globalRange: 10.48.38.62/32
+    - name: edge11
+      controlplane_ip: 10.48.38.63
+      cluster: crimson
+      globalRange: 10.48.38.64/32
+    - name: edge12
+      controlplane_ip: 10.48.38.65
+      cluster: crimson
+      globalRange: 10.48.38.65/32
+    - name: edge13
+      controlplane_ip: 10.48.38.67
+      cluster: crimson
+      globalRange: 10.48.38.68/32
+    - name: edge14
+      controlplane_ip: 10.48.38.69
+      cluster: crimson
+      globalRange: 10.48.38.70/32
