--- a/apps/edge-k8s-applicationset.yaml
+++ b/apps/edge-k8s-applicationset.yaml
@@ -33,7 +33,7 @@ spec:
       sources:
       - repoURL: 'git@github.com:nutanix-cloud-native/nkex-cluster.git'
         path: .
-        targetRevision: main
+        targetRevision: wolf
         helm:
           valueFiles:
           - $values/mgmt/edge-base-values.yaml
@@ -45,7 +45,9 @@ spec:
           - name: "kcpMachine.cluster"
             value: '{{.cluster}}'
           - name: "kubeVip.cloudProvider.globalRange"
-            value: '{{.globalRange}}'          
+            value: '{{.globalRange}}'    
+          - name: "prismCentral.password"
+            value: '$NUTANIX_PASSWORD'      
       - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd.git'
         targetRevision: crimson-small-scale
         ref: values
