--- a/mgmt/edge-base-values.yaml
+++ b/mgmt/edge-base-values.yaml
@@ -4,6 +4,13 @@ cluster:
 controlPlaneEndpoint:
   host: 10.48.38.85
 
+prismCentral:
+  inject: true
+  address: crimson-pc.dachlab.net
+  insecure: false
+  port: 9440
+  username: admin
+
 controlplane:
   replicas: 1
 
@@ -27,6 +34,9 @@ mdMachine:
 machinehealthcheck: false
 
 ccm:
+  enabled: false
+
+metricsServer:
   enabled: false
 
 csi:
