--- a/apps/edge-k8s-applicationset.yaml
+++ b/apps/edge-k8s-applicationset.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       syncPolicy:
         automated:
-          prune: true
+          prune: false
         syncOptions:
           - CreateNamespace=true
       project: default
