--- a/apps/edge-k8s-applicationset.yaml
+++ b/apps/edge-k8s-applicationset.yaml
@@ -49,5 +49,5 @@ spec:
           - name: "prismCentral.password"
             value: '$NUTANIX_PASSWORD'      
       - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd.git'
-        targetRevision: crimson-small-scale
+        targetRevision: main
         ref: values
