--- a/mgmt/edge-base-values.yaml
+++ b/mgmt/edge-base-values.yaml
@@ -37,10 +37,9 @@ ccm:
   enabled: true
   replicas: 1
   enableCustomLabeling: false
-  #image:
-  #  {}
-    # repository: ""
-    # tag: ""
+  image:
+    repository: quay.io/wolfgangntnx/nutanix-cloud-controller-manager
+    tag: latest
 
 metricsServer:
   enabled: false
