--- a/apps/edge-k8s-applicationset.yaml
+++ b/apps/edge-k8s-applicationset.yaml
@@ -33,7 +33,7 @@ spec:
       sources:
       - repoURL: 'git@github.com:nutanix-cloud-native/nkex-cluster.git'
         path: .
-        targetRevision: wolf
+        targetRevision: main
         helm:
           valueFiles:
           - $values/mgmt/edge-base-values.yaml
