--- a/mgmt/edge-base-values.yaml
+++ b/mgmt/edge-base-values.yaml
@@ -47,6 +47,6 @@ metricsServer:
 csi:
   snapshot: false
   enable_csi2: false
-  enable_csi3: false
-  createSecret: false
-  storageContainer: default
+  enable_csi3: true
+  createSecret: true
+  storageContainer: k8s
