--- a/apps/edge-k8s-applicationset.yaml
+++ b/apps/edge-k8s-applicationset.yaml
@@ -54,7 +54,7 @@ spec:
         targetRevision: littlelab1
         ref: values
       - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd.git'
-        path: common-helm-charts
+        path: common-helm-charts/external-secrets
         targetRevision: common-helm
         helm:
           parameters:
