value path name

--- a/apps/edge-k8s-applicationset.yaml
+++ b/apps/edge-k8s-applicationset.yaml
@@ -59,4 +59,4 @@ spec:
         helm:
           parameters:
           - name: "cluster.name"
-            value: '{{.cluster}}'
+            value: '{{.name}}'
