--- a/common-helm-charts/external-secrets/templates/prismcentral-external-secret.yaml
+++ b/common-helm-charts/external-secrets/templates/prismcentral-external-secret.yaml
@@ -10,7 +10,7 @@ spec:
     name: {{ .Values.secretStore.name }}
     kind: {{ .Values.secretStore.kind }}
   target:
-    name: {{ .Values.cluster.name }}-credentials
+    name: {{ .Values.cluster.name }}-credential
     template:
       type: Opaque
       metadata: {}
