--- a/common-helm-charts/external-secrets/templates/prismcentral-external-secret.yaml
+++ b/common-helm-charts/external-secrets/templates/prismcentral-external-secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: "external-secrets.io/v1beta1"
 kind: ExternalSecret
 metadata:
-  name: {{ .Values.cluster.name }}-credentials
+  name: {{ .Values.cluster.name }}-credential
   namespace: {{ .Values.cluster.name }}
 spec:
   refreshInterval: 15s
