Common helm charts (#7)
add common helm charts

--- a/mgmt/edge-base-values.yaml
+++ b/mgmt/edge-base-values.yaml
@@ -1,8 +1,12 @@
 cluster:
-  kubernetesVersion: "v1.25.10"
+  kubernetesVersion: "v1.25.12"
 
-controlPlaneEndpoint:
-  host: 10.48.38.85
+prismCentral:
+  inject: false
+  address: pc.littlelab1.dachlab.net
+  insecure: false
+  port: 9440
+  username: admin
 
 prismCentral:
   inject: false
@@ -15,25 +19,26 @@ controlplane:
   replicas: 1
 
 nodes:
-  replicas: 1
+  replicas: 2
 
 kubeVip:
   cloudProvider:
     enabled: false
 
 kcpMachine:
-  cluster: crimson
   os: ubuntu-2204
-  subnet: phx-routed-55-IPAM
 
 mdMachine:
-  cluster: crimson
   os: ubuntu-2204
-  subnet: phx-routed-55-IPAM
 
 machinehealthcheck: false
 
 ccm:
+  enabled: true
+  replicas: 1
+  enableCustomLabeling: false
+
+metricsServer:
   enabled: false
 
 metricsServer:
@@ -44,4 +49,4 @@ csi:
   enable_csi2: false
   enable_csi3: false
   createSecret: false
-  storageContainer: default
+  storageContainer: k8s
