--- a/apps/edge-k8s-applicationset.yaml
+++ b/apps/edge-k8s-applicationset.yaml
@@ -10,7 +10,7 @@ spec:
       generators:
       - git:
           repoURL: https://github.com/wolfganghuse/edge-k8s-argocd.git
-          revision: crimson-small-scale
+          revision: littlelab1
           files:
           - path: mgmt/edge-k8s-clusters.yaml
       - list:
@@ -44,10 +44,20 @@ spec:
             value: '{{.cluster}}'
           - name: "kcpMachine.cluster"
             value: '{{.cluster}}'
-          - name: "kubeVip.cloudProvider.globalRange"
-            value: '{{.globalRange}}'    
+          - name: "mdMachine.subnet"
+            value: '{{.subnet}}'
+          - name: "kcpMachine.subnet"
+            value: '{{.subnet}}'
           - name: "prismCentral.password"
             value: '$NUTANIX_PASSWORD'      
       - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd.git'
-        targetRevision: main
+        targetRevision: littlelab1
         ref: values
+      - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd.git'
+        path: common-helm-charts
+        targetRevision: common-helm
+        helm:
+          parameters:
+          - name: "cluster.name"
+            value: '{{.name}}'
+
