--- a/apps/workload-applicationset.yaml
+++ b/apps/workload-applicationset.yaml
@@ -20,6 +20,6 @@ spec:
       source:
         repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd.git'
         path: workload
-        targetRevision: crimson-small-scale
+        targetRevision: main
       destination:
         server: '{{server}}'
