--- a/mgmt/edge-k8s-clusters.yaml
+++ b/mgmt/edge-k8s-clusters.yaml
@@ -3,4 +3,5 @@ key:
     - name: crimson-dev
       controlplane_ip: 10.48.38.43
       cluster: crimson
+      prismcentral: crimson-pc
       subnet: phx-routed-55-IPAM
