--- a/apps/edge-k8s-applicationset.yaml
+++ b/apps/edge-k8s-applicationset.yaml
@@ -56,3 +56,9 @@ spec:
             value: "ubuntu-2204"
           - name: "mdMachine.os"
             value: "ubuntu-2204"
+          - name: "cluster.kubernetesVersion"
+            value: "v1.25.10"
+          - name: "csi.snapshot"
+            value: "false"
+          - name: "csi.enable_csi2"
+            value: "false"
