--- a/scripts/external-secret-test.yaml
+++ b/scripts/external-secret-test.yaml
@@ -13,5 +13,5 @@ spec:
   data:
     - secretKey: token
       remoteRef:
-        key: secret/demo_secrets 
-        property: tokenA
+        key: secret/prismcentral/crimson-pc 
+        property: endpoint
