--- a/apps/edge-k8s-applicationset.yaml
+++ b/apps/edge-k8s-applicationset.yaml
@@ -10,7 +10,7 @@ spec:
       generators:
       - git:
           repoURL: https://github.com/wolfganghuse/edge-k8s-argocd.git
-          revision: littlelab1
+          revision: env-littlelab1
           files:
           - path: mgmt/edge-k8s-clusters.yaml
       - list:
@@ -22,7 +22,7 @@ spec:
     spec:
       syncPolicy:
         automated:
-          prune: false
+          prune: true
         syncOptions:
           - CreateNamespace=true
       project: default
@@ -30,37 +30,57 @@ spec:
         name: ''
         namespace: '{{.name}}'
         server: 'https://kubernetes.default.svc'
-      sources:
-      - repoURL: 'git@github.com:nutanix-cloud-native/nkex-cluster.git'
+      source:
+        repoURL: 'git@github.com:nutanix-cloud-native/nkex-cluster.git'
         path: .
         targetRevision: main
-        helm:
-          valueFiles:
-          - $values/mgmt/edge-base-values.yaml
-          parameters:
-          - name: "controlPlaneEndpoint.host"
-            value: '{{.controlplane_ip}}'
-          - name: "mdMachine.cluster"
-            value: '{{.cluster}}'
-          - name: "kcpMachine.cluster"
-            value: '{{.cluster}}'
-          - name: "mdMachine.subnet"
-            value: '{{.subnet}}'
-          - name: "kcpMachine.subnet"
-            value: '{{.subnet}}'
-          - name: "prismCentral.password"
-            value: '$NUTANIX_PASSWORD'      
-          - name: "prismCentral.address"
-            value: '{{.prismcentral}}'      
-      - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd.git'
-        targetRevision: main
-        ref: values
-      - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd.git'
-        path: common-helm-charts/external-secrets
-        targetRevision: main
-        helm:
-          parameters:
-          - name: "cluster.name"
-            value: '{{.name}}'
-          - name: "credentialsecret.key"
-            value: 'secret/data/prismcentral/{{.prismcentral}}'
+        plugin:
+          name: argocd-vault-plugin-helm
+          env:
+            - name: HELM_VALUES
+              value: |
+                cluster:
+                  kubernetesVersion: "v1.25.10"
+                prismCentral:
+                  inject: true
+                  address: <path:secret/data/prismcentral/{{.prismcentral}}#endpoint>
+                  insecure: false
+                  port: 9440
+                  username: <path:secret/data/prismcentral/{{.prismcentral}}#user>
+                  password: <path:secret/data/prismcentral/{{.prismcentral}}#pass>
+                primElement:
+                  address: <path:secret/data/prismelement/{{.cluster}}#endpoint>
+                  insecure: false
+                  port: 9440
+                  username: <path:secret/data/prismelement/{{.cluster}}#user>
+                  password: <path:secret/data/prismelement/{{.cluster}}#pass>
+                controlPlaneEndpoint:
+                  host: '{{.controlplane_ip}}'
+                controlplane:
+                  replicas: 1
+                nodes:
+                  replicas: 1
+                kubeVip:
+                  cloudProvider:
+                    enabled: false
+                kcpMachine:
+                  os: ubuntu-2204
+                  subnet: '{{.subnet}}'
+                  cluster: '{{.cluster}}'
+                mdMachine:
+                  os: ubuntu-2204
+                  cluster: '{{.cluster}}'
+                  subnet: '{{.subnet}}'
+                  machinehealthcheck: false
+                ccm:
+                  enabled: true
+                  replicas: 1
+                  enableCustomLabeling: false
+                metricsServer:
+                  enabled: false
+                csi:
+                  snapshot: true
+                  enable_csi2: true
+                  enable_csi3: false
+                  createSecret: true
+                  storageContainer: k8s
