--- a/common-helm-charts/crossplane-infrastructure/templates/isolation-rule.yaml
+++ b/common-helm-charts/crossplane-infrastructure/templates/isolation-rule.yaml
@@ -31,5 +31,5 @@ spec:
       }
 
   writeConnectionSecretToRef:
-    namespace: crossplane-system
+    namespace:  {{ .Values.cluster.name }}
     name: providerconfig-nutanix
