--- a/common-helm-charts/crossplane-infrastructure/templates/isolation-rule.yaml
+++ b/common-helm-charts/crossplane-infrastructure/templates/isolation-rule.yaml
@@ -29,7 +29,8 @@ spec:
               values = ["Production"]
           }
       }
-
+    providerConfigRef:
+      name: {{ .Values.cluster.name }}-providerconfig
   writeConnectionSecretToRef:
     namespace:  {{ .Values.cluster.name }}
     name: providerconfig-nutanix
