--- a/apps/crossplane-integration.yaml
+++ b/apps/crossplane-integration.yaml
@@ -34,7 +34,7 @@ spec:
       source:
         path: 'common-helm-charts/crossplane-infrastructure'
         repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
-        targetRevision: 'crossplane'
+        targetRevision: 'test1'
         plugin:
           name: argocd-vault-plugin-helm
           env:
