--- a/apps/edge-k8s-applicationset.yaml
+++ b/apps/edge-k8s-applicationset.yaml
@@ -67,10 +67,24 @@ spec:
                   os: ubuntu-2204
                   subnet: '{{.subnet}}'
                   cluster: '{{.cluster}}'
+                  additionalCategories:
+                  - key: AppTier
+                    value: ControlPlane
+                  - key: AppType
+                    value: Kubernetes
+                  - key: Environment
+                    value: '{{.cluster}}'
                 mdMachine:
                   os: ubuntu-2204
                   cluster: '{{.cluster}}'
                   subnet: '{{.subnet}}'
+                  additionalCategories:
+                  - key: AppTier
+                    value: Worker
+                  - key: AppType
+                    value: Kubernetes
+                  - key: Environment
+                    value: '{{.cluster}}'
                 registryMirrors:
                 - orig: _default
                   mirror: harbor.infrastructure.dachlab.net/v2/docker.io
